==> EFeru/hoverboard-sideboard-hack-GD/Src/util.c <==
#include <stdio.h>
#include <string.h>
#include "systick.h"
#include "gd32f1x0.h"
#include "defines.h"
#include "config.h"
#include "setup.h"
#include "util.h"
#include "mpu6050.h"

void intro_demo_led(uint32_t tDelay)
{
    int i;

    for (i = 0; i < 3; i++) {
        gpio_bit_set(LED1_GPIO_Port, LED1_Pin);
        gpio_bit_reset(LED3_GPIO_Port, LED3_Pin);
        delay_1ms(tDelay);
        gpio_bit_set(LED2_GPIO_Port, LED2_Pin);
        gpio_bit_reset(LED1_GPIO_Port, LED1_Pin);
        delay_1ms(tDelay);
        gpio_bit_set(LED3_GPIO_Port, LED3_Pin);
        gpio_bit_reset(LED2_GPIO_Port, LED2_Pin);
        delay_1ms(tDelay);
    }

    for (i = 0; i < 2; i++) {
        gpio_bit_set(LED1_GPIO_Port, LED1_Pin);
        gpio_bit_set(LED2_GPIO_Port, LED2_Pin);
        gpio_bit_set(LED3_GPIO_Port, LED3_Pin);
        gpio_bit_set(LED4_GPIO_Port, LED4_Pin);
        gpio_bit_set(LED5_GPIO_Port, LED5_Pin);
        delay_1ms(tDelay);
        gpio_bit_reset(LED1_GPIO_Port, LED1_Pin);
        gpio_bit_reset(LED2_GPIO_Port, LED2_Pin);
        gpio_bit_reset(LED3_GPIO_Port, LED3_Pin);
        gpio_bit_reset(LED4_GPIO_Port, LED4_Pin);
        gpio_bit_reset(LED5_GPIO_Port, LED5_Pin);
    }
}

void input_init(void) {
    #ifdef SERIAL_CONTROL
        usart_Tx_DMA_config(USART_MAIN, (uint8_t *)&Sideboard, sizeof(Sideboard));
    #endif
    #if defined(SERIAL_DEBUG) || defined(SERIAL_FEEDBACK)
        usart_Rx_DMA_config(USART_MAIN, (uint8_t *)rx1_buffer, sizeof(rx1_buffer));
    #endif
    #ifdef SERIAL_AUX_TX
        usart_Tx_DMA_config(USART_AUX, (uint8_t *)&AuxTx, sizeof(AuxTx));
    #endif
    #ifdef SERIAL_AUX_RX
        usart_Rx_DMA_config(USART_AUX, (uint8_t *)rx0_buffer, sizeof(rx0_buffer));
    #endif

    intro_demo_led(100);                                // Short LEDs intro demo with 100 ms delay. This also gives some time for the MPU-6050 to power-up.	

    #ifdef MPU_SENSOR_ENABLE
        if(mpu_config()) {                              // IMU MPU-6050 config
            mpuStatus = ERROR;
            gpio_bit_set(LED1_GPIO_Port, LED1_Pin);     // Turn on RED LED - sensor enabled and NOT ok
        }
        else {
            mpuStatus = SUCCESS;
            gpio_bit_set(LED2_GPIO_Port, LED2_Pin);     // Turn on GREEN LED - sensor enabled and ok
        }
    #else
        gpio_bit_set(LED2_GPIO_Port, LED2_Pin);         // Turn on GREEN LED - sensor disabled
    #endif

    #ifdef SERIAL_DEBUG
        mpu_handle_input('h');                          // Print the User Help commands to serial
    #endif
}

void handle_sensors(void) {
    sensor1_read = gpio_input_bit_get(SENSOR1_GPIO_Port, SENSOR1_Pin);
    sensor2_read = gpio_input_bit_get(SENSOR2_GPIO_Port, SENSOR2_Pin);

    // SENSOR1
    if (sensor1 == RESET && sensor1_read == SET) {
        // Sensor ACTIVE: Do something here (one time task on activation)
        sensor1 = SET;
        gpio_bit_set(LED4_GPIO_Port, LED4_Pin);
        consoleLog("SENSOR 1 ON\r\n");
    } else if(sensor1 == SET && sensor1_read == RESET) {
        // Sensor DEACTIVE: Do something here (one time task on deactivation)
        sensor1 = RESET;
        gpio_bit_reset(LED4_GPIO_Port, LED4_Pin);
        consoleLog("SENSOR 1 OFF\r\n");
    }

    // SENSOR2
    if (sensor2 == RESET && sensor2_read == SET) {
        // Sensor ACTIVE: Do something here (one time task on activation)
        sensor2 = SET;
        gpio_bit_set(LED5_GPIO_Port, LED5_Pin);
        consoleLog("SENSOR 2 ON\r\n");
    } else if (sensor2 == SET && sensor2_read == RESET) {
        // Sensor DEACTIVE: Do something here (one time task on deactivation)
        sensor2 = RESET;
        gpio_bit_reset(LED5_GPIO_Port, LED5_Pin);
        consoleLog("SENSOR 2 OFF\r\n");
    }

    if (sensor1 == SET) {
        // Sensor ACTIVE: Do something here (continuous task)
    }
    if (sensor2 == SET) {
        // Sensor ACTIVE: Do something here (continuous task)
    }
}

void handle_usart(void) {
    // Tx USART MAIN
    #ifdef SERIAL_CONTROL
        if (main_loop_counter % 5 == 0 && dma_transfer_number_get(USART1_TX_DMA_CH) == 0) {     // Check if DMA channel counter is 0 (meaning all data has been transferred)
            Sideboard.start     = (uint16_t)SERIAL_START_FRAME;
            Sideboard.pitch     = (int16_t)mpu.euler.pitch;
            Sideboard.dPitch    = (int16_t)mpu.gyro.y;
            Sideboard.cmd1      = (int16_t)cmd1;
            Sideboard.cmd2      = (int16_t)cmd2; 
            Sideboard.sensors   = (uint16_t)( (cmdSwitch << 8)  | (sensor1 | (sensor2 << 1) | (mpuStatus << 2)) );
            Sideboard.checksum  = (uint16_t)(Sideboard.start ^ Sideboard.pitch ^ Sideboard.dPitch ^ Sideboard.cmd1 ^ Sideboard.cmd2 ^ Sideboard.sensors);
        
            dma_channel_disable(USART1_TX_DMA_CH);
            DMA_CHCNT(USART1_TX_DMA_CH)     = sizeof(Sideboard);
            DMA_CHMADDR(USART1_TX_DMA_CH)   = (uint32_t)&Sideboard;
            dma_channel_enable(USART1_TX_DMA_CH);
        }
    #endif
    // Rx USART MAIN
    #ifdef SERIAL_FEEDBACK
        if (timeoutCntSerial1++ >= SERIAL_TIMEOUT) {                // Timeout qualification
            timeoutFlagSerial1 = 1;                                 // Timeout detected
            timeoutCntSerial1  = SERIAL_TIMEOUT;                    // Limit timout counter value
        }
        if (timeoutFlagSerial1 && main_loop_counter % 100 == 0) {   // In case of timeout bring the system to a Safe State and indicate error if desired
            toggle_led(LED3_GPIO_Port, LED3_Pin);                   // Toggle the Yellow LED every 100 ms
        }
    #endif

    // Tx USART AUX
    #ifdef SERIAL_AUX_TX
        if (main_loop_counter % 5 == 0 && dma_transfer_number_get(USART0_TX_DMA_CH) == 0) {     // Check if DMA channel counter is 0 (meaning all data has been transferred)
            AuxTx.start     = (uint16_t)SERIAL_START_FRAME;
            AuxTx.signal1   = (int16_t)sensor1;
            AuxTx.signal2   = (int16_t)sensor2;
            AuxTx.checksum  = (uint16_t)(AuxTx.start ^ AuxTx.signal1 ^ AuxTx.signal2);
        
            dma_channel_disable(USART0_TX_DMA_CH);
            DMA_CHCNT(USART0_TX_DMA_CH)     = sizeof(AuxTx);
            DMA_CHMADDR(USART0_TX_DMA_CH)   = (uint32_t)&AuxTx;
            dma_channel_enable(USART0_TX_DMA_CH);
        }
    #endif
    // Rx USART AUX
    #ifdef SERIAL_AUX_RX
        #ifdef CONTROL_IBUS
        if (!timeoutFlagSerial0) {
            for (uint8_t i = 0; i < (IBUS_NUM_CHANNELS * 2); i+=2) {
                ibus_captured_value[(i/2)] = CLAMP(command.channels[i] + (command.channels[i+1] << 8) - 1000, 0, 1000); // 1000-2000 -> 0-1000
            }
            cmd1        = (ibus_captured_value[0] - 500) * 2;                           // Channel 1
            cmd2        = (ibus_captured_value[1] - 500) * 2;                           // Channel 2
            cmdSwitch   = (uint16_t)(switch_check(ibus_captured_value[6],0)      |      // Channel 7
                                     switch_check(ibus_captured_value[7],1) << 1 |      // Channel 8
                                     switch_check(ibus_captured_value[8],1) << 3 |      // Channel 9
                                     switch_check(ibus_captured_value[9],0) << 5);      // Channel 10
        }
        #endif

        if (timeoutCntSerial0++ >= SERIAL_TIMEOUT) {                // Timeout qualification
            timeoutFlagSerial0 = 1;                                 // Timeout detected
            timeoutCntSerial0  = SERIAL_TIMEOUT;                    // Limit timout counter value
            cmd1 = cmd2 = 0;                                        // Set commands to 0
            cmdSwitch &= ~(1U << 0);                                // Clear Bit 0, to switch to default control input
        }
        // if (timeoutFlagSerial0 && main_loop_counter % 100 == 0) {   // In case of timeout bring the system to a Safe State and indicate error if desired
        //     toggle_led(LED2_GPIO_Port, LED2_Pin);                   // Toggle the Green LED every 100 ms
        // }

        #ifdef SERIAL_DEBUG
            // Print MPU data to Console
            if (main_loop_counter % 50 == 0) {
                aux_print_to_console();
            }
        #endif
    #endif
}

void handle_leds(void){
    #ifdef SERIAL_FEEDBACK
        if (!timeoutFlagSerial1) {
            if (Feedback.cmdLed & LED1_SET) { gpio_bit_set(LED1_GPIO_Port, LED1_Pin); } else { gpio_bit_reset(LED1_GPIO_Port, LED1_Pin); }
            if (Feedback.cmdLed & LED2_SET) { gpio_bit_set(LED2_GPIO_Port, LED2_Pin); } else { gpio_bit_reset(LED2_GPIO_Port, LED2_Pin); }
            if (Feedback.cmdLed & LED3_SET) { gpio_bit_set(LED3_GPIO_Port, LED3_Pin); } else { gpio_bit_reset(LED3_GPIO_Port, LED3_Pin); }
            if (Feedback.cmdLed & LED4_SET) { gpio_bit_set(LED4_GPIO_Port, LED4_Pin); } else { gpio_bit_reset(LED4_GPIO_Port, LED4_Pin); }
            if (Feedback.cmdLed & LED5_SET) { gpio_bit_set(LED5_GPIO_Port, LED5_Pin); } else { gpio_bit_reset(LED5_GPIO_Port, LED5_Pin); }
            if (Feedback.cmdLed & LED4_SET) { gpio_bit_set(AUX3_GPIO_Port, AUX3_Pin); } else { gpio_bit_reset(AUX3_GPIO_Port, AUX3_Pin); }
        }
    #endif
}

int8_t i2c_writeBytes(uint8_t slaveAddr, uint8_t regAddr, uint8_t length, uint8_t *data)
{

    // assign WRITE command
    i2c_ReadWriteCmd    = WRITE;

    // assign inputs
    i2c_status          = -1;
    i2c_slaveAddress    = slaveAddr << 1;       // Address is shifted one position to the left. LSB is reserved for the Read/Write bit.
    i2c_regAddress      = regAddr;
    i2c_txbuffer        = data;
    i2c_nDABytes        = length;
    i2c_nRABytes        = 1;

    // enable the I2C0 interrupt
    i2c_interrupt_enable(MPU_I2C, I2C_INT_ERR | I2C_INT_BUF | I2C_INT_EV);

    // the master waits until the I2C bus is idle
    while(i2c_flag_get(MPU_I2C, I2C_FLAG_I2CBSY));

    // the master sends a start condition to I2C bus
    i2c_start_on_bus(MPU_I2C);

    // Wait until all data bytes are sent/received
    while(i2c_nDABytes > 0);

    return i2c_status;

}

int8_t i2c_readBytes(uint8_t slaveAddr, uint8_t regAddr, uint8_t length, uint8_t *data) 
{

    // assign READ command
    i2c_ReadWriteCmd    = READ;
    
    // assign inputs
    i2c_status          = -1;
    i2c_slaveAddress    = slaveAddr << 1;   // Address is shifted one position to the left. LSB is reserved for the Read/Write bit.
    i2c_regAddress      = regAddr;
    i2c_rxbuffer        = data;
    i2c_nDABytes        = length;
    i2c_nRABytes        = 1;

    // enable the I2C0 interrupt
    i2c_interrupt_enable(MPU_I2C, I2C_INT_ERR | I2C_INT_BUF | I2C_INT_EV);

    if(2 == i2c_nDABytes){
        i2c_ackpos_config(MPU_I2C, I2C_ACKPOS_NEXT);    // send ACK for the next byte
    }

    // the master waits until the I2C bus is idle
    while(i2c_flag_get(MPU_I2C, I2C_FLAG_I2CBSY));

    // the master sends a start condition to I2C bus
    i2c_start_on_bus(MPU_I2C);

    // Wait until all data bytes are sent/received
    while(i2c_nDABytes > 0);

    // Return status
    return i2c_status;

}
