==> EFeru/hoverboard-sideboard-hack-STM/Src/util.c <==
#include <stdio.h>
#include <string.h>
#include "stm32f1xx_hal.h"
#include "usart.h"
#include "i2c.h"
#include "defines.h"
#include "config.h"
#include "util.h"
#include "mpu6050.h"

void intro_demo_led(uint32_t tDelay)
{
    int i;

    for (i = 0; i < 3; i++) {
        HAL_GPIO_WritePin(LED1_GPIO_Port, LED1_Pin, GPIO_PIN_SET);
        HAL_GPIO_WritePin(LED3_GPIO_Port, LED3_Pin, GPIO_PIN_RESET);
        HAL_Delay(tDelay);
        HAL_GPIO_WritePin(LED2_GPIO_Port, LED2_Pin, GPIO_PIN_SET);
        HAL_GPIO_WritePin(LED1_GPIO_Port, LED1_Pin, GPIO_PIN_RESET);
        HAL_Delay(tDelay);
        HAL_GPIO_WritePin(LED3_GPIO_Port, LED3_Pin, GPIO_PIN_SET);
        HAL_GPIO_WritePin(LED2_GPIO_Port, LED2_Pin, GPIO_PIN_RESET);
        HAL_Delay(tDelay);
    }

    for (i = 0; i < 2; i++) {
        HAL_GPIO_WritePin(LED1_GPIO_Port, LED1_Pin, GPIO_PIN_SET);
        HAL_GPIO_WritePin(LED2_GPIO_Port, LED2_Pin, GPIO_PIN_SET);
        HAL_GPIO_WritePin(LED3_GPIO_Port, LED3_Pin, GPIO_PIN_SET);
        HAL_GPIO_WritePin(LED4_GPIO_Port, LED4_Pin, GPIO_PIN_SET);
        HAL_GPIO_WritePin(LED5_GPIO_Port, LED5_Pin, GPIO_PIN_SET);
        HAL_Delay(tDelay);
        HAL_GPIO_WritePin(LED1_GPIO_Port, LED1_Pin, GPIO_PIN_RESET);
        HAL_GPIO_WritePin(LED2_GPIO_Port, LED2_Pin, GPIO_PIN_RESET);
        HAL_GPIO_WritePin(LED3_GPIO_Port, LED3_Pin, GPIO_PIN_RESET);
        HAL_GPIO_WritePin(LED4_GPIO_Port, LED4_Pin, GPIO_PIN_RESET);
        HAL_GPIO_WritePin(LED5_GPIO_Port, LED5_Pin, GPIO_PIN_RESET);
    }
}

void input_init(void) {
    #if defined(SERIAL_DEBUG) || defined(SERIAL_FEEDBACK)
        HAL_UART_Receive_DMA(&huart2, (uint8_t *)rx2_buffer, sizeof(rx2_buffer));
        UART_DisableRxErrors(&huart2);
    #endif
    #ifdef SERIAL_AUX_RX
        HAL_UART_Receive_DMA(&huart1, (uint8_t *)rx1_buffer, sizeof(rx1_buffer));
        UART_DisableRxErrors(&huart1);
    #endif

    intro_demo_led(100);                                                // Short LEDs intro demo with 100 ms delay. This also gives some time for the MPU-6050 to power-up.	

    #ifdef MPU_SENSOR_ENABLE
        if(mpu_config()) {                                              // IMU MPU-6050 config
            mpuStatus = ERROR;
            HAL_GPIO_WritePin(LED1_GPIO_Port, LED1_Pin, GPIO_PIN_SET);  // Turn on RED LED - sensor enabled and NOT ok
        }
        else {
            mpuStatus = SUCCESS;
            HAL_GPIO_WritePin(LED2_GPIO_Port, LED2_Pin, GPIO_PIN_SET);  // Turn on GREEN LED - sensor enabled and ok
        }
    #else
        HAL_GPIO_WritePin(LED2_GPIO_Port, LED2_Pin, GPIO_PIN_SET);      // Turn on GREEN LED - sensor disabled
    #endif

    #ifdef SERIAL_DEBUG
        mpu_handle_input('h');                                          // Print the User Help commands to serial
    #endif
}

void handle_sensors(void) {
    sensor1_read = HAL_GPIO_ReadPin(SENSOR1_GPIO_Port, SENSOR1_Pin);
    sensor2_read = HAL_GPIO_ReadPin(SENSOR2_GPIO_Port, SENSOR2_Pin);

    // SENSOR1
    if (sensor1 == GPIO_PIN_RESET && sensor1_read == GPIO_PIN_SET) {
      sensor1 = GPIO_PIN_SET;
      // Sensor ACTIVE: Do something here (one time task on activation)
      HAL_GPIO_WritePin(LED4_GPIO_Port, LED4_Pin, GPIO_PIN_SET);
      consoleLog("SENSOR 1 ON\r\n");
    } else if(sensor1 == GPIO_PIN_SET && sensor1_read == GPIO_PIN_RESET) {
      // Sensor DEACTIVE: Do something here (one time task on deactivation)
      sensor1 = GPIO_PIN_RESET;
      HAL_GPIO_WritePin(LED4_GPIO_Port, LED4_Pin, GPIO_PIN_RESET);
      consoleLog("SENSOR 1 OFF\r\n");
    }

    // SENSOR2
    if (sensor2 == GPIO_PIN_RESET && sensor2_read == GPIO_PIN_SET) {
      sensor2 = GPIO_PIN_SET;
      // Sensor ACTIVE: Do something here (one time task on activation)
      HAL_GPIO_WritePin(LED5_GPIO_Port, LED5_Pin, GPIO_PIN_SET);
      consoleLog("SENSOR 2 ON\r\n");
    } else if (sensor2 == GPIO_PIN_SET && sensor2_read == GPIO_PIN_RESET) {
      // Sensor DEACTIVE: Do something here (one time task on deactivation)
      sensor2 = GPIO_PIN_RESET;
      HAL_GPIO_WritePin(LED5_GPIO_Port, LED5_Pin, GPIO_PIN_RESET);
      consoleLog("SENSOR 2 OFF\r\n");
    }

    if (sensor1 == GPIO_PIN_SET) {
      // Sensor ACTIVE: Do something here (continuous task)
    }
    if (sensor2 == GPIO_PIN_SET) {
      // Sensor ACTIVE: Do something here (continuous task)
    }
}

void handle_usart(void) {
    // Tx USART MAIN
    #ifdef SERIAL_CONTROL
        if (main_loop_counter % 5 == 0 && __HAL_DMA_GET_COUNTER(huart2.hdmatx) == 0) {     // Check if DMA channel counter is 0 (meaning all data has been transferred)
            Sideboard.start     = (uint16_t)SERIAL_START_FRAME;
            Sideboard.pitch     = (int16_t)mpu.euler.pitch;
            Sideboard.dPitch    = (int16_t)mpu.gyro.y;
            Sideboard.cmd1      = (int16_t)cmd1;
            Sideboard.cmd2      = (int16_t)cmd2; 
            Sideboard.sensors   = (uint16_t)( (cmdSwitch << 8)  | (sensor1 | (sensor2 << 1) | (mpuStatus << 2)) );
            Sideboard.checksum  = (uint16_t)(Sideboard.start ^ Sideboard.pitch ^ Sideboard.dPitch ^ Sideboard.cmd1 ^ Sideboard.cmd2 ^ Sideboard.sensors);

            HAL_UART_Transmit_DMA(&huart2, (uint8_t *)&Sideboard, sizeof(Sideboard));
        }
    #endif
    // Rx USART MAIN
    #ifdef SERIAL_FEEDBACK
        if (timeoutCntSerial2++ >= SERIAL_TIMEOUT) {                // Timeout qualification
            timeoutFlagSerial2 = 1;                                 // Timeout detected
            timeoutCntSerial2  = SERIAL_TIMEOUT;                    // Limit timout counter value
        }
        if (timeoutFlagSerial2 && main_loop_counter % 100 == 0) {   // In case of timeout bring the system to a Safe State and indicate error if desired
            HAL_GPIO_TogglePin(LED3_GPIO_Port, LED3_Pin);           // Toggle the Yellow LED every 100 ms
        }
    #endif

    // Tx USART AUX
    #ifdef SERIAL_AUX_TX
        if (main_loop_counter % 5 == 0 && __HAL_DMA_GET_COUNTER(huart1.hdmatx) == 0) {     // Check if DMA channel counter is 0 (meaning all data has been transferred)
            AuxTx.start     = (uint16_t)SERIAL_START_FRAME;
            AuxTx.signal1   = (int16_t)sensor1;
            AuxTx.signal2   = (int16_t)sensor2;
            AuxTx.checksum  = (uint16_t)(AuxTx.start ^ AuxTx.signal1 ^ AuxTx.signal2);

            HAL_UART_Transmit_DMA(&huart1, (uint8_t *)&AuxTx, sizeof(AuxTx));
        }
    #endif
    // Rx USART AUX
    #ifdef SERIAL_AUX_RX
        #ifdef CONTROL_IBUS
        if (!timeoutFlagSerial1) {
            for (uint8_t i = 0; i < (IBUS_NUM_CHANNELS * 2); i+=2) {
                ibus_captured_value[(i/2)] = CLAMP(command.channels[i] + (command.channels[i+1] << 8) - 1000, 0, 1000); // 1000-2000 -> 0-1000
            }
            cmd1        = (ibus_captured_value[0] - 500) * 2;                           // Channel 1
            cmd2        = (ibus_captured_value[1] - 500) * 2;                           // Channel 2
            cmdSwitch   = (uint16_t)(switch_check(ibus_captured_value[6],0)      |      // Channel 7
                                     switch_check(ibus_captured_value[7],1) << 1 |      // Channel 8
                                     switch_check(ibus_captured_value[8],1) << 3 |      // Channel 9
                                     switch_check(ibus_captured_value[9],0) << 5);      // Channel 10
        }
        #endif

        if (timeoutCntSerial1++ >= SERIAL_TIMEOUT) {                // Timeout qualification
            timeoutFlagSerial1 = 1;                                 // Timeout detected
            timeoutCntSerial1  = SERIAL_TIMEOUT;                    // Limit timout counter value
            cmd1 = cmd2 = 0;                                        // Set commands to 0
            cmdSwitch &= ~(1U << 0);                                // Clear Bit 0, to switch to default control input
        }
        // if (timeoutFlagSerial0 && main_loop_counter % 100 == 0) {   // In case of timeout bring the system to a Safe State and indicate error if desired
        //     HAL_GPIO_TogglePin(LED2_GPIO_Port, LED2_Pin);           // Toggle the Green LED every 100 ms
        // }

        #ifdef SERIAL_DEBUG
            // Print MPU data to Console
            if (main_loop_counter % 50 == 0) {
                aux_print_to_console();
            }
        #endif
    #endif
}

void handle_leds(void) {
    #ifdef SERIAL_FEEDBACK
      if (!timeoutFlagSerial2) {
        if (Feedback.cmdLed & LED1_SET) { HAL_GPIO_WritePin(LED1_GPIO_Port, LED1_Pin, GPIO_PIN_SET); } else { HAL_GPIO_WritePin(LED1_GPIO_Port, LED1_Pin, GPIO_PIN_RESET); }
        if (Feedback.cmdLed & LED2_SET) { HAL_GPIO_WritePin(LED2_GPIO_Port, LED2_Pin, GPIO_PIN_SET); } else { HAL_GPIO_WritePin(LED2_GPIO_Port, LED2_Pin, GPIO_PIN_RESET); }
        if (Feedback.cmdLed & LED3_SET) { HAL_GPIO_WritePin(LED3_GPIO_Port, LED3_Pin, GPIO_PIN_SET); } else { HAL_GPIO_WritePin(LED3_GPIO_Port, LED3_Pin, GPIO_PIN_RESET); }
        if (Feedback.cmdLed & LED4_SET) { HAL_GPIO_WritePin(LED4_GPIO_Port, LED4_Pin, GPIO_PIN_SET); } else { HAL_GPIO_WritePin(LED4_GPIO_Port, LED4_Pin, GPIO_PIN_RESET); }
        if (Feedback.cmdLed & LED5_SET) { HAL_GPIO_WritePin(LED5_GPIO_Port, LED5_Pin, GPIO_PIN_SET); } else { HAL_GPIO_WritePin(LED5_GPIO_Port, LED5_Pin, GPIO_PIN_RESET); }
      }
    #endif
}

int8_t i2c_writeBytes(uint8_t slaveAddr, uint8_t regAddr, uint8_t length, uint8_t *data)
{	
    // !! Using the I2C Interrupt will fail writing the DMP.. could be that DMP memory writing requires more time !! So use the I2C without interrupt.
    // HAL_I2C_Mem_Write_IT(&hi2c1, slaveAddr << 1, regAddr, 1, data, length);
    // while(HAL_I2C_STATE_READY != HAL_I2C_GetState(&hi2c1));                     // Wait until all data bytes are sent/received
    // return 0;
#ifdef I2C_SINGLE_BYTE
    HAL_StatusTypeDef res = HAL_OK;
    if(regAddr==0x6b && length ==2){
        uint8_t i;
        for(i=0; i < length && res == HAL_OK; i++) {
            res = HAL_I2C_Mem_Write(&hi2c1, slaveAddr << 1, regAddr+i, 1, data+i, 1, 100);    // Address is shifted one position to the left. LSB is reserved for the Read/Write bit.
        }
    }
      else {
            res = HAL_I2C_Mem_Write(&hi2c1, slaveAddr << 1, regAddr, 1, data, length, 100);    // Address is shifted one position to the left. LSB is reserved for the Read/Write bit. 
      }
      if(res != HAL_OK) {
         printf("i2c_writeBytes not ok %u %u\r\n", regAddr, length);
      }
      return res;
#else
    return HAL_I2C_Mem_Write(&hi2c1, slaveAddr << 1, regAddr, 1, data, length, 100);    // Address is shifted one position to the left. LSB is reserved for the Read/Write bit.
#endif
}

int8_t i2c_readBytes(uint8_t slaveAddr, uint8_t regAddr, uint8_t length, uint8_t *data)
{
    // !! Using the I2C Interrupt will fail writing the DMP.. could be that DMP memory writing requires more time !! So use the I2C without interrupt.
    // HAL_I2C_Mem_Read(&hi2c1, slaveAddr << 1, regAddr, 1, data, length);
    // while(HAL_I2C_STATE_READY != HAL_I2C_GetState(&hi2c1));                   // Wait until all data bytes are sent/received
    // return 0;
#ifdef I2C_SINGLE_BYTE
    HAL_StatusTypeDef res = HAL_OK;
    if((regAddr==0x72 || regAddr == 0x41) && length ==2) {
       uint8_t i;
       for(i=0; i < length && res == HAL_OK; i++) {
          res= HAL_I2C_Mem_Read(&hi2c1, slaveAddr << 1, regAddr+i, 1, data+i, 1, 100);     // Address is shifted one position to the left. LSB is reserved for the Read/Write bit.
       }
    }
    else {
        res = HAL_I2C_Mem_Read(&hi2c1, slaveAddr << 1, regAddr, 1, data, length, 100);     // Address is shifted one position to the left. LSB is reserved for the Read/Write bit.

    }
      if(res != HAL_OK) {
        printf("i2c_readBytes not ok %u %u\r\n", regAddr, length);
      }
      return res;
#else
    return HAL_I2C_Mem_Read(&hi2c1, slaveAddr << 1, regAddr, 1, data, length, 100);     // Address is shifted one position to the left. LSB is reserved for the Read/Write bit.
#endif

//    

}
